# eggcrack-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.c
examples/: CMakeLists.txt  id_sequencer_example.c
include/factory/: id_sequencer.h  product.h
include/storage/: circular_queue.h  priority_queue.h
include/storage/mailbox/: finite_mailbox.h
src/: CMakeLists.txt  main.c
src/factory/: CMakeLists.txt  id_sequencer.c
src/platform/: CMakeLists.txt  windows_wrapper.h
src/storage/: circular_queue.c  priority_queue.c
src/storage/mailbox/: finite_mailbox.c
